--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,6 +1,6 @@
 $text-color-green: #009b4d;
 $text-color-light-grey: #2b292d99;
-$text-color-almost-white: #F4F5F7;
+$text-color-almost-white: #f4f5f7;
 $text-color-ultramarine-blue: #3142c6;
 $text-color-dark-grey: #2b292d;
 $text-color-pink-grey: #f3c6bd;
@@ -9,10 +9,11 @@ $color-white: #fff;
 $color-black: #000000;
 $color-white-grey: #e3e3e3;
 $color-ultra-blue: #3040c4;
-$color-light: #F4F5F7;
-$color-light-blue: #00A1C612;
-$color-hover-blue: #3141C5;
+$color-light: #f4f5f7;
+$color-light-blue: #00a1c612;
+$color-hover-blue: #3141c5;
 
-
-$cards-light-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
-$cards-hover-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15), 0px 11px 55px rgba(0, 0, 0, 0.07);
+$cards-light-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1),
+  0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+$cards-hover-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15),
+  0px 11px 55px rgba(0, 0, 0, 0.07);
