--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@
 .about {
   padding: 46px 15px;
   width: 100%;
-  background: #F4F5F7;
+  background: #f4f5f7;
 }
 @media (min-width: 1400px) {
   .about {
@@ -471,7 +471,7 @@
 .audiences {
   width: 100%;
   padding: 0 15px;
-  background-color: #00A1C612;
+  background-color: #00a1c612;
 }
 @media (min-width: 1400px) {
   .audiences {
@@ -551,7 +551,8 @@
   height: 48px;
   background-color: #fff;
   border: 0;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.1);
   border-radius: 2px;
   font-weight: 700;
   font-size: 18px;
@@ -587,7 +588,8 @@
   height: 300px;
   margin: 15px 0 0 0;
   background-color: #fff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.1);
   border-radius: 8px;
   font-weight: 700;
   font-size: 22px;
@@ -600,9 +602,10 @@
   }
 }
 .audiences__cards_user:hover {
-  background-color: #3141C5;
+  background-color: #3141c5;
   color: #fff;
-  box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15), 0px 11px 55px rgba(0, 0, 0, 0.07);
+  box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15),
+    0px 11px 55px rgba(0, 0, 0, 0.07);
   cursor: pointer;
 }
 .audiences__cards_img {
@@ -611,7 +614,7 @@
 
 .order {
   padding: 50px 15px;
-  background-color: #F4F5F7;
+  background-color: #f4f5f7;
 }
 @media (min-width: 1400px) {
   .order {
@@ -896,7 +899,7 @@
 
 html {
   font-size: 16px;
-  font-family: "Work Sans", sans-serif;
+  font-family: 'Work Sans', sans-serif;
   color: #2b292d;
 }
 
