--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,7 +7,7 @@
 @import 'customers';
 @import 'features';
 @import 'tips';
-@import 'audiences';
+@import 'audience';
 @import 'order';
 @import 'footer';
 
