--- a/styles.css
+++ b/styles.css
@@ -565,21 +565,21 @@
   }
 }
 
-.audience__cards {
+.audience__user {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 25px 0 50px 0;
 }
 @media (min-width: 1400px) {
-  .audience__cards {
+  .audience__user {
     flex-direction: row;
     justify-content: space-between;
     margin: 111px 131px 110px 130px;
     padding: 0;
   }
 }
-.audience__cards_user {
+.audience__user-card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -594,18 +594,18 @@
   line-height: 28px;
 }
 @media (min-width: 1400px) {
-  .audience__cards_user {
+  .audience__user-card {
     width: 262px;
     margin: 0;
   }
 }
-.audience__cards_user:hover {
+.audience__user-card:hover {
   background-color: #3141c5;
   color: #fff;
   box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15), 0px 11px 55px rgba(0, 0, 0, 0.07);
   cursor: pointer;
 }
-.audience__cards_img {
+.audience__user_img {
   padding: 22px 0 22px 0;
 }
 
@@ -626,7 +626,7 @@
 }
 .order__illustration {
   max-width: 200px;
-  margin: 50px 45px 0 45px;
+  margin: 0 45px 0 45px;
 }
 @media (min-width: 1400px) {
   .order__illustration {
@@ -636,7 +636,7 @@
 }
 .order__title {
   width: 290px;
-  margin-top: 40px;
+  margin: 40px 0 0 0;
   font-weight: 700;
   font-size: 40px;
   line-height: 40px;
@@ -648,6 +648,7 @@
   }
 }
 .order__text {
+  height: 167px;
   margin: 0;
   margin-top: 18px;
   font-size: 22px;
@@ -655,6 +656,7 @@
 }
 @media (min-width: 1400px) {
   .order__text {
+    height: auto;
     margin-top: 12px;
   }
 }
