--- a/styles/order.scss
+++ b/styles/order.scss
@@ -15,7 +15,7 @@
 
   &__illustration {
     max-width: 200px;
-    margin: 50px 45px 0 45px;
+    margin: 0 45px 0 45px;
 
     @include for-large-up {
       max-width: 269.41px;
@@ -25,7 +25,7 @@
 
   &__title {
     width: 290px;
-    margin-top: 40px;
+    margin: 40px 0 0 0;
     font-weight: 700;
     font-size: 40px;
     line-height: 40px;
@@ -37,12 +37,14 @@
   }
 
   &__text {
+    height: 167px;
     margin: 0;
     margin-top: 18px;
     font-size: 22px;
     line-height: 32px;
 
     @include for-large-up {
+      height: auto;
       margin-top: 12px;
     }
   }
