--- a/styles.css
+++ b/styles.css
@@ -605,7 +605,7 @@
   box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15), 0px 11px 55px rgba(0, 0, 0, 0.07);
   cursor: pointer;
 }
-.audience__user_img {
+.audience__user-img {
   padding: 22px 0 22px 0;
 }
 
