--- a/styles/order.scss
+++ b/styles/order.scss
@@ -1,9 +1,12 @@
 .order {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 50px 15px;
   background-color: $color-light;
 
   @include for-large-up {
-    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: flex-start;
     padding: 73px 0 72px 0;
@@ -30,6 +33,7 @@
     font-size: 40px;
     line-height: 40px;
     letter-spacing: -0.25px;
+    text-align: center;
 
     @include for-large-up {
       width: 555px;
