--- a/styles.css
+++ b/styles.css
@@ -569,13 +569,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 25px 0 50px 0;
+  padding: 40px 0 50px 0;
 }
 @media (min-width: 1400px) {
   .user-card {
     flex-direction: row;
     justify-content: space-between;
-    margin: 111px 131px 110px 130px;
+    margin: 110px 130px 110px 130px;
     padding: 0;
   }
 }
@@ -592,6 +592,9 @@
   font-weight: 700;
   font-size: 22px;
   line-height: 28px;
+}
+.user-card__block:first-child {
+  margin: 0;
 }
 @media (min-width: 1400px) {
   .user-card__block {
