--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -110,8 +110,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 290px;
-    height: 300px;
+    height: 100%;
     margin: 15px 0 0 0;
     background-color: $color-white;
     box-shadow: $cards-light-shadow;
@@ -140,5 +141,13 @@
 
   &__img {
     padding: 22px 0 22px 0;
+  }
+
+  &__text {
+    margin: 0 20px 33px 20px;
+
+    @include for-large-up {
+      margin: 0 25px 33px 25px;
+    }
   }
 }
