--- a/styles.css
+++ b/styles.css
@@ -564,28 +564,28 @@
   }
 }
 
-.user-card {
+.audience__cards {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 40px 0 50px 0;
 }
 @media (min-width: 1400px) {
-  .user-card {
+  .audience__cards {
     flex-direction: row;
     justify-content: space-between;
     margin: 110px 130px 110px 130px;
     padding: 0;
   }
 }
-.user-card__block {
+.audience__cards .user-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 290px;
   height: 100%;
-  margin: 15px 0 0 0;
+  margin: 15px 15px 0 15px;
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
   border-radius: 8px;
@@ -593,31 +593,31 @@
   font-size: 22px;
   line-height: 28px;
 }
-.user-card__block:first-child {
-  margin: 0;
+.audience__cards .user-card__img {
+  padding: 22px 0 22px 0;
+}
+.audience__cards .user-card__text {
+  margin: 0 20px 33px 20px;
 }
 @media (min-width: 1400px) {
-  .user-card__block {
+  .audience__cards .user-card__text {
+    margin: 0 25px 33px 25px;
+  }
+}
+.audience__cards .user-card:first-child {
+  margin-top: 0;
+}
+@media (min-width: 1400px) {
+  .audience__cards .user-card {
     width: 262px;
     margin: 0;
   }
 }
-.user-card__block:hover {
+.audience__cards .user-card:hover {
   background-color: #3141c5;
   color: #fff;
   box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15), 0px 11px 55px rgba(0, 0, 0, 0.07);
   cursor: pointer;
-}
-.user-card__img {
-  padding: 22px 0 22px 0;
-}
-.user-card__text {
-  margin: 0 20px 33px 20px;
-}
-@media (min-width: 1400px) {
-  .user-card__text {
-    margin: 0 25px 33px 25px;
-  }
 }
 
 .order {
